Fix infobox issue on narrow screens

--- a/main.scss
+++ b/main.scss
@@ -272,12 +272,10 @@ svg.x {
   margin: .5rem;
 }
 svg.seedplus-wordmark {
-  width: 10rem;
-  margin: 1rem;
+  margin: 1rem 15%;
 }
 svg.aws-wordmark {
-  width: 5rem;
-  margin: 1rem;
+  margin: 1rem 30%;
 }
 
 section.section-hero {
